@@ -282,6 +282,8 @@ FATE_TESTS += fate-smc
 fate-smc: CMD = framecrc  -i $(SAMPLES)/smc/cass_schi.qt -vsync 0 -pix_fmt rgb24
 FATE_TESTS += fate-sp5x
 fate-sp5x: CMD = framecrc  -idct simple -i $(SAMPLES)/sp5x/sp5x_problem.avi
+FATE_TESTS += fate-sub-srt
+fate-sub-srt: CMD = md5  -i $(SAMPLES)/sub/SubRip_capability_tester.srt -f ass
 FATE_TESTS += fate-sunraster-1bit-raw
 fate-sunraster-1bit-raw: CMD = framecrc  -i $(SAMPLES)/sunraster/lena-1bit-raw.sun
 FATE_TESTS += fate-sunraster-1bit-rle
